<ScrollView 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

  <EditText
      android:id="@+id/editText1"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentLeft="true"
      android:layout_alignParentRight="true"
      android:layout_below="@+id/edit_message"
      android:layout_marginTop="19dp"
      android:ems="10"
      android:hint="@string/Email" />

  <Spinner
      android:id="@+id/spinner1"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_below="@+id/editText1"
      android:layout_alignLeft="@+id/editText4"
      android:layout_alignRight="@+id/editText4"
      android:entries="@array/teams_array"
      android:prompt="@string/Team" />

  <Spinner
      android:id="@+id/Spinner01"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_below="@+id/spinner1"
      android:layout_centerHorizontal="true"
      android:layout_alignLeft="@+id/editText4"
      android:layout_alignRight="@+id/editText4"
      android:entries="@array/Reimbursement_type_array"
      android:prompt="@string/Requesttype" />

  <EditText
      android:id="@+id/editText2"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentLeft="true"
      android:layout_alignParentRight="true"
      android:layout_below="@+id/Spinner01"
      android:ems="10"
      android:hint="Amount Requested" />

  <EditText
      android:id="@+id/editText3"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentLeft="true"
      android:layout_alignParentRight="true"
      android:layout_below="@+id/editText2"
      android:ems="10"
      android:hint="Vendor/Company" />

  <EditText
      android:id="@+id/editText4"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentLeft="true"
      android:layout_alignParentRight="true"
      android:layout_below="@+id/editText3"
      android:ems="10"
      android:hint="2-3 Sentence Explanation"
      android:inputType="textMultiLine" />

  <ImageView
      android:id="@+id/imageView1"
      android:layout_width="wrap_content"
      android:layout_height="50dp"
      android:layout_alignLeft="@+id/editText4"
      android:layout_alignParentTop="true"
      android:src="@drawable/logo" />

  <EditText
      android:id="@+id/edit_message"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignLeft="@+id/editText4"
      android:layout_alignParentRight="true"
      android:layout_below="@+id/imageView1"
      android:layout_marginTop="14dp"
      android:ems="10"
      android:hint="@string/FirstandLastName" >

      <requestFocus />
  </EditText>
  
<ImageView
    android:id="@+id/ImageView01"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" 
    android:layout_below="@+id/editText4">
</ImageView>

<Button
    android:id="@+id/button2"
    style="?android:attr/buttonStyleSmall"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignLeft="@+id/editText4"
    android:layout_below="@+id/ImageView01"
    android:text="@string/submit" />

<Button
    android:id="@+id/button1"
    style="?android:attr/buttonStyleSmall"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_below="@+id/button2"
    android:text="@string/uploadimage" />

</RelativeLayout>
</ScrollView>